# message_backend

./: .env.development  Cargo.toml  docker-compose.yml
docker/db/: my.conf
docker/db/initdb.d/: init.sql
memo/: memo.txt
src/: config.rs  infrastructure.rs  main.rs
src/app/: usecase.rs
src/app/usecase/: receive_message.rs
src/codes/: error.rs
src/domain/: repository.rs
src/domain/model/: message.rs
src/domain/repository/: messages_repository.rs
src/infrastructure/: actix.rs  app_state.rs  db.rs
src/infrastructure/actix/: controllers.rs  requests.rs  router.rs
src/infrastructure/db/: connection.rs
src/infrastructure/db/entity/: messages.rs
src/infrastructure/db/repositories/: messages_repository.rs
