[package]
name = "message_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
chrono = "0.4.39"
config = "0.11.0"
dotenvy = "0.15.7"
log = "0.4.22"
sea-orm = {version="1.1.1", features=["sqlx-mysql", "runtime-async-std-native-tls", "macros"]}
serde = {version = "1.0.216", features=["derive"]}
serde_json = "1.0.133"
simplelog = "0.12.2"
thiserror = "2.0.11"
